<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:contentDescription="@string/home"
        android:icon="@drawable/menu_home" />
    <item
        android:id="@+id/editorialFragment"
        android:title="@string/editorial"
        android:contentDescription="@string/editorial"
        android:icon="@drawable/menu_editorial" />
</menu>