<resources>
    <string name="app_name">Deezer App</string>
    <string name="charts">Charts</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="search_on_deezer">Search on Deezer</string>
    <string name="more">More</string>

    <string name="unknown">Unknown</string>
    <string name="flow">Flow</string>
    <string name="recommendations">Recommendations</string>
    <string name="home">Home</string>
    <string name="editorial">Editorial</string>
    <string name="edit_selection">Weekly selection</string>
    <string name="cover">Cover</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_next">Skip next</string>
    <string name="skip_previous">Skip previous</string>
    <string name="load_failed_message">Something went wrong!</string>
    <string name="try_again">Try again</string>
    <string name="weekly_selection_update_title">Weekly selection</string>
    <string name="weekly_selection_update_content">Check out new selected content: %1$s</string>
    <string name="and_others">and others</string>
    <string name="stop">Stop</string>
    <string name="edit_releases">Releases</string>
    <string name="releases_update_content">Don\'t miss new releases: %1$s</string>
    <string name="releases_update_title">Releases</string>
    <string name="and_more">and more</string>
    <string name="email_label">Email:</string>
    <string name="birthday_label">Birthday:</string>
    <string name="inscription_date_label">Inscription date:</string>
    <string name="country_label">Country:</string>
    <string name="open_profile_info_in_web">Open profile info in web</string>
    <string name="user_name">%1$s\n%2$s</string>
    <string name="login_error">Login failed! Try again.</string>
    <string name="user_info_fetch_error">Cannot fetch user info. Try again later</string>
</resources>