<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchResultsFragment"
        android:name="com.alexjprog.deezerforandroid.ui.mvvm.SearchResultsFragment"
        android:label="SearchResultsFragment">
        <argument
            android:name="query"
            app:argType="string" />
        <action
...
